Deal with Hudson warnings for Autotools core.